Ajout : 	- fonction scss 	- rotation promo 	- order 	- finitions diverses en scss

--- a/evaluation.html
+++ b/evaluation.html
@@ -7,9 +7,9 @@
 		<link rel="stylesheet" href="css/mon_site.css">
 	</head>
 	<body>
-        <div class="backgroud" >
-            <figure>
-                <div class="promo"><b>-30% CRYOLIPOLYSE</b> jusqu'a fin octobre</div>
+        <div class="backgroud figure_homme">
+            <figure class="figure_homme">
+                <div class="promo"><b>- 30% CRYOLIPOLYSE Body Sculpt sur toute formule </b>jusqu’à fin octobre</div>
                 <figcaption class="figcap_homme"><b>Laisser vous soigner...</b>3 minutes air sec 80°C</figcaption>
                 <img src="background.jpg" alt="backgroud_homme" class="backgroud_homme">
             </figure>
@@ -28,8 +28,10 @@
         
         <div>
             <div class="inner">
-                <h1>Cryothérapie</h1>
-                <div class="libelle_cryo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                <h1>Cryothérapie à Corps Entier</h1>
+                <div class="libelle_cryo">Go Cryo est le premier centre de Cryothérapie à Corps Entier (CCE) de Serre-Chevalier et du Briançonnais.
+                    Il a été créé par Léo Meyer, ostéopathe depuis 20 ans, pour permettre aux sportifs
+                    et au grand public de bénéficier de cette thérapie puissante et novatrice.
                 </div>
                 <h2 class="titre_ice">ICE EXPERIENCE </h2>
             </div>
@@ -37,16 +39,16 @@
         
         <div>
             <div class="inner experiences">
-                <div class="experience">
+                <div class="experience autre_soin">
                     <img class="img_experience" src="image_gym.jpg" alt="gym">
                     <h3>AUTRES SOINS</h3>
                 </div>
-                <div class="experience">
+                <div class="experience cryotherapie">
                     <img class="img_experience" src="image_smartphone.jpg" alt="gym">
                     <h3>CRYOTHERAPIE</h3>
                 </div>
-                <div class="experience">
-                    <img class="img_experience cryolyse" src="image_cryolipolyse.png" alt="gym">
+                <div class="experience cryoplyse">
+                    <img class="img_experience" src="image_cryolipolyse.png" alt="gym">
                     <h3>CRYOPLIYSE</h3>
                 </div>
             </div>
