Ajout divers: 	- polices 	- espacements 	- finalisationx

--- a/evaluation.html
+++ b/evaluation.html
@@ -7,10 +7,10 @@
 		<link rel="stylesheet" href="css/mon_site.css">
 	</head>
 	<body>
-        <div class="backgroud figure_homme">
+        <div class="backgroud">
             <figure class="figure_homme">
                 <div class="promo"><b>- 30% CRYOLIPOLYSE Body Sculpt sur toute formule </b>jusqu’à fin octobre</div>
-                <figcaption class="figcap_homme"><b>Laisser vous soigner...</b>3 minutes air sec 80°C</figcaption>
+                <figcaption class="figcap_homme"><div><b>Laisser vous soigner... </b></div><div id="fig_caracteritiques"> 3 minutes air sec 80°C</div></figcaption>
                 <img src="background.jpg" alt="backgroud_homme" class="backgroud_homme">
             </figure>
         </div>
@@ -33,7 +33,7 @@
                     Il a été créé par Léo Meyer, ostéopathe depuis 20 ans, pour permettre aux sportifs
                     et au grand public de bénéficier de cette thérapie puissante et novatrice.
                 </div>
-                <h2 class="titre_ice">ICE EXPERIENCE </h2>
+                <h2 class="titre_ice">ICE <span>EXPERIENCE</span> </h2>
             </div>
         </div>
         
