Remplement de l'image qui est maintenant en background image

--- a/evaluation.html
+++ b/evaluation.html
@@ -8,11 +8,8 @@
 	</head>
 	<body>
         <div class="backgroud">
-            <figure class="figure_homme">
                 <div class="promo"><b>- 30% CRYOLIPOLYSE Body Sculpt sur toute formule </b>jusqu’à fin octobre</div>
-                <figcaption class="figcap_homme"><div><b>Laisser vous soigner... </b></div><div id="fig_caracteritiques"> 3 minutes air sec 80°C</div></figcaption>
-                <img src="background.jpg" alt="backgroud_homme" class="backgroud_homme">
-            </figure>
+                <div class="figcap_homme"><div><b>Laisser vous soigner...</b></div><div id="fig_caracteritiques">3 minutes air sec 80°C</div></div>
         </div>
         
         <div>
